full badge support

--- a/locale/cn-CN/alert_bundle.properties
+++ b/locale/cn-CN/alert_bundle.properties
@@ -7,3 +7,10 @@ alert_success=成功。
 alert_bad_request=不正确的要求。缺少必要的参数。
 alert_invalid_credential=无效的用户名或密码。
 alert_service_error=该服务时遇到一个错误。请稍后再试。
+alert_thanks=谢谢支持继续发展。
+alert_sl=在赶时间吗？太好了！
+alert_ny=今天，我们从纽约人？
+alert_trophy=恭喜你！你昨天结束了冠军领奖台上。
+alert_onek=俱乐部千保存的书签
+alert_fivek=五千年保存俱乐部
+alert_tenk=万保存俱乐部
