--- a/locale/cs-CZ/alert_bundle.properties
+++ b/locale/cs-CZ/alert_bundle.properties
@@ -7,3 +7,10 @@ alert_success=Úspěch.
 alert_bad_request=Špatný požadavek. Chybí povinný parametr.
 alert_invalid_credential=Neplatné uživatelské jméno nebo heslo.
 alert_service_error=Služeb došlo k chybě. Zkuste to prosím později.
+alert_thanks=Děkujeme za podporu vývoj tento addon.
+alert_sl=Urychlení? Awesome!
+alert_ny=Pocit, New Yorker dnes?
+alert_trophy=Gratulujeme! Včera jste skončili na stupních vítězů vítěze.
+alert_onek=Tisíc Uložit Club
+alert_fivek=Pět tisíc Uložit Club
+alert_tenk=Deset tisíc Uložit Club
