--- a/locale/de-DE/alert_bundle.properties
+++ b/locale/de-DE/alert_bundle.properties
@@ -7,3 +7,10 @@ alert_success=Erfolg.
 alert_bad_request=Bad Anfrage. Fehlende erforderliche Parameter.
 alert_invalid_credential=Ungültiger Benutzername oder Kennwort.
 alert_service_error=Der Dienst ist ein Fehler aufgetreten. Bitte versuchen Sie es später erneut.
+alert_thanks=Danke für die Unterstützung weitere Entwicklung von diesem Addon.
+alert_sl=Speeding? Awesome!
+alert_ny=Lust auf New Yorker heute?
+alert_trophy=Herzlichen Glückwunsch! Gestern haben Sie landeten auf Sieger Podium.
+alert_onek=Tausende von spart Club
+alert_fivek=Fünftausend spart Club
+alert_tenk=Zehntausend spart Club
