--- a/locale/es-ES/alert_bundle.properties
+++ b/locale/es-ES/alert_bundle.properties
@@ -7,3 +7,10 @@ alert_success=Éxito.
 alert_bad_request=Solicitud incorrecta. Falta el parámetro.
 alert_invalid_credential=No válido nombre de usuario o contraseña.
 alert_service_error=El servicio ha detectado un error. Por favor, inténtelo de nuevo más tarde.
+alert_thanks=Gracias por apoyar el desarrollo continuado de este addon.
+alert_sl=En la prisa? Muy bien!
+alert_ny=Sentirse como Nueva York hoy en día?
+alert_trophy=¡Felicidades! Ayer terminó en el podio ganador.
+alert_onek=Mil Guardar Club
+alert_fivek=Cinco Mil Guardar Club
+alert_tenk=Diez mil Guardar Club
