--- a/locale/fr/alert_bundle.properties
+++ b/locale/fr/alert_bundle.properties
@@ -7,3 +7,10 @@ alert_success=Succès.
 alert_bad_request=Demande est mauvais. Missing paramètre requis.
 alert_invalid_credential=Nom d'utilisateur ou mot de passe non valide.
 alert_service_error=Le service a rencontré une erreur. S'il vous plaît réessayer plus tard.
+alert_thanks=Merci de soutenir le développement continu de cet addon.
+alert_sl=Excès de vitesse? Awesome!
+alert_ny=Envie de New-Yorkais d'aujourd'hui?
+alert_trophy=Félicitations! Hier, vous avez terminé sur le podium gagnant.
+alert_onek=Mille Club Enregistrer
+alert_fivek=Cinq Mille Club Enregistrer
+alert_tenk=Dix Mille Club Enregistrer
