--- a/locale/it-IT/alert_bundle.properties
+++ b/locale/it-IT/alert_bundle.properties
@@ -7,3 +7,10 @@ alert_success=Successo.
 alert_bad_request=Richiesta errata. Missing parametro richiesto.
 alert_invalid_credential=Nome utente non valido o una password.
 alert_service_error=Il servizio ha riscontrato un errore. Si prega di riprovare più tardi.
+alert_thanks=Grazie per il sostegno allo sviluppo continuo di questo addon.
+alert_sl=Eccesso di velocità? Impressionante!
+alert_ny=Sentirsi come New Yorker oggi?
+alert_trophy=Complimenti! Ieri è finito sul podio vincitore.
+alert_onek=Salva migliaia di Club
+alert_fivek=Cinque Mille Salva Club
+alert_tenk=Ten Thousand Salva Club
