--- a/locale/jp-JP/alert_bundle.properties
+++ b/locale/jp-JP/alert_bundle.properties
@@ -7,3 +7,10 @@ alert_success=成功しました。
 alert_bad_request=不正な要求。不足しているパラメータを必要です。
 alert_invalid_credential=無効なユーザー名またはパスワードを入力します。
 alert_service_error=サービスはエラーが発生しました。後でもう一度やり直してください。
+alert_thanks=おかげで、継続的な開発のためのサポートしています。
+alert_sl=高速化？素晴らしい！
+alert_ny=今日はニューヨーカーからですか？
+alert_trophy=おめでとう！昨日は優勝の表彰台上で終わった。
+alert_onek=クラブ千のブックマークを保存
+alert_fivek=五千のクラブを保存
+alert_tenk=10は千クラブを保存
