--- a/locale/nl-NL/alert_bundle.properties
+++ b/locale/nl-NL/alert_bundle.properties
@@ -7,3 +7,10 @@ alert_success=Succes.
 alert_bad_request=Slechte verzoek. Er ontbreekt een vereiste parameter.
 alert_invalid_credential=Ongeldige gebruikersnaam of wachtwoord.
 alert_service_error=De dienst is een fout opgetreden. Probeer het later opnieuw.
+alert_thanks=Bedankt voor de ondersteuning van verdere ontwikkeling van deze addon.
+alert_sl=Snelheidsovertredingen? Geweldig!
+alert_ny=Het gevoel alsof New Yorker vandaag?
+alert_trophy=Gefeliciteerd! Gisteren heb je uiteindelijk op winnaar podium.
+alert_onek=Bespaar duizenden Club
+alert_fivek=Vijfduizend opslaan Club
+alert_tenk=Ten Thousand opslaan Club
