--- a/locale/pt/alert_bundle.properties
+++ b/locale/pt/alert_bundle.properties
@@ -7,3 +7,10 @@ alert_success=Successo.
 alert_bad_request=Bad request. Faltando parâmetro necessário.
 alert_invalid_credential=Nome de usuário inválido ou senha.
 alert_service_error=O serviço encontrou um erro. Por favor, tente novamente mais tarde.
+alert_thanks=Obrigado por apoiar o desenvolvimento continuado deste addon.
+alert_sl=Acelerar? Impressionante!
+alert_ny=Sentindo-se como New Yorker hoje?
+alert_trophy=Parabéns! Ontem você acabou no pódio vencedor.
+alert_onek=Mil Save Club
+alert_fivek=Cinco Mil Save Club
+alert_tenk=Ten Thousand Save Club
