--- a/locale/ru-RU/alert_bundle.properties
+++ b/locale/ru-RU/alert_bundle.properties
@@ -7,3 +7,10 @@ alert_success=Успешное спасение.
 alert_bad_request=Неверный запрос. Отсутствует необходимый параметр.
 alert_invalid_credential=Неверное имя пользователя или пароль.
 alert_service_error=Службы произошла ошибка. Пожалуйста, повторите попытку позже.
+alert_thanks=Спасибо за поддержку дальнейшего развития этого аддона.
+alert_sl=Ускорение? Отлично!
+alert_ny=Чувствуя, как Нью-Йоркер сегодня?
+alert_trophy=Поздравляю! Вчера вы оказались на подиуме победителя.
+alert_onek=Тысяча Сохранить клуб
+alert_fivek=Пять тысяч Сохранить клуб
+alert_tenk=Десять тысяч Сохранить клуб
