--- a/locale/sr-RS/alert_bundle.properties
+++ b/locale/sr-RS/alert_bundle.properties
@@ -7,3 +7,10 @@ alert_success=Успешно чување.
 alert_bad_request=Неисправан захтев. Недостаје потребан параметар.
 alert_invalid_credential=Погрешно корисничко име или лозинка.
 alert_service_error=Сервис је наишао на грешку. Молимо покушајте поново касније.
+alert_thanks=Хвала за подршку за наставак развоја.
+alert_sl=У журби? Сјајно!
+alert_ny=Данас се осећамо као да смо из Њу Јорка?
+alert_trophy=Честитамо! Јуче сте завршили на подијуму.
+alert_onek=Клуб Хиљаду букмарка
+alert_fivek=Клуб Пет хиљада букмарка
+alert_tenk=Клуб десет хиљада букмарка
