--- a/locale/en/alert_bundle.properties
+++ b/locale/en/alert_bundle.properties
@@ -7,3 +7,10 @@ alert_success=Success.
 alert_bad_request=Bad request. Missing required parameter.
 alert_invalid_credential=Invalid username or password.
 alert_service_error=The service encountered an error. Please try again later.
+alert_thanks=Thanks for supporting continued development of this addon.
+alert_sl=Speeding? Awesome!
+alert_ny=Feeling like New Yorker today?
+alert_trophy=Congrats! Yesterday you ended up on winner podium.
+alert_onek=Thousand Save Club
+alert_fivek=Five Thousand Save Club
+alert_tenk=Ten Thousand Save Club
