--- a/locale/cs-CZ/alert_bundle.properties
+++ b/locale/cs-CZ/alert_bundle.properties
@@ -14,3 +14,4 @@ alert_trophy=Gratulujeme! Včera jste skončili na stupních vítězů vítěze.
 alert_onek=Tisíc Uložit Club
 alert_fivek=Pět tisíc Uložit Club
 alert_tenk=Deset tisíc Uložit Club
+alert_hny=Happy New Year
