--- a/locale/fr/alert_bundle.properties
+++ b/locale/fr/alert_bundle.properties
@@ -14,3 +14,4 @@ alert_trophy=Félicitations! Hier, vous avez terminé sur le podium gagnant.
 alert_onek=Mille Club Enregistrer
 alert_fivek=Cinq Mille Club Enregistrer
 alert_tenk=Dix Mille Club Enregistrer
+alert_hny=Joyeux Nouvel An
