--- a/locale/it-IT/alert_bundle.properties
+++ b/locale/it-IT/alert_bundle.properties
@@ -13,4 +13,5 @@ alert_ny=Sentirsi come New Yorker oggi?
 alert_trophy=Complimenti! Ieri è finito sul podio vincitore.
 alert_onek=Salva migliaia di Club
 alert_fivek=Cinque Mille Salva Club
-alert_tenk=Ten Thousand Salva Club
+alert_tenk=Diecimila Salva Club
+alert_hny=Buon anno
