--- a/locale/jp-JP/alert_bundle.properties
+++ b/locale/jp-JP/alert_bundle.properties
@@ -14,3 +14,4 @@ alert_trophy=おめでとう！昨日は優勝の表彰台上で終わった。
 alert_onek=クラブ千のブックマークを保存
 alert_fivek=五千のクラブを保存
 alert_tenk=10は千クラブを保存
+alert_hny=明けましておめでとうございます
