--- a/locale/nl-NL/alert_bundle.properties
+++ b/locale/nl-NL/alert_bundle.properties
@@ -14,3 +14,4 @@ alert_trophy=Gefeliciteerd! Gisteren heb je uiteindelijk op winnaar podium.
 alert_onek=Bespaar duizenden Club
 alert_fivek=Vijfduizend opslaan Club
 alert_tenk=Ten Thousand opslaan Club
+alert_hny=Happy New Year
