--- a/locale/pt/alert_bundle.properties
+++ b/locale/pt/alert_bundle.properties
@@ -14,3 +14,4 @@ alert_trophy=Parabéns! Ontem você acabou no pódio vencedor.
 alert_onek=Mil Save Club
 alert_fivek=Cinco Mil Save Club
 alert_tenk=Ten Thousand Save Club
+alert_hny=Feliz Ano Novo
