--- a/locale/en/alert_bundle.properties
+++ b/locale/en/alert_bundle.properties
@@ -14,3 +14,4 @@ alert_trophy=Congrats! Yesterday you ended up on winner podium.
 alert_onek=Thousand Save Club
 alert_fivek=Five Thousand Save Club
 alert_tenk=Ten Thousand Save Club
+alert_hny=Happy New Year
