fixing locale and left bookmark

--- a/locale/de-DE/alert_bundle.properties
+++ b/locale/de-DE/alert_bundle.properties
@@ -14,4 +14,4 @@ alert_trophy=Herzlichen Glückwunsch! Gestern haben Sie landeten auf Sieger Podi
 alert_onek=Tausende von spart Club
 alert_fivek=Fünftausend spart Club
 alert_tenk=Zehntausend spart Club
-alert_hny=Glückliches neues Jahr
+alert_hny=Erholsame Ferien!
