--- a/locale/es-ES/alert_bundle.properties
+++ b/locale/es-ES/alert_bundle.properties
@@ -14,4 +14,4 @@ alert_trophy=¡Felicidades! Ayer terminó en el podio ganador.
 alert_onek=Mil Guardar Club
 alert_fivek=Cinco Mil Guardar Club
 alert_tenk=Diez mil Guardar Club
-alert_hny=Feliz Año Nuevo
+alert_hny=Felices fiestas!
