--- a/locale/it-IT/alert_bundle.properties
+++ b/locale/it-IT/alert_bundle.properties
@@ -14,4 +14,4 @@ alert_trophy=Complimenti! Ieri è finito sul podio vincitore.
 alert_onek=Salva migliaia di Club
 alert_fivek=Cinque Mille Salva Club
 alert_tenk=Diecimila Salva Club
-alert_hny=Buon anno
+alert_hny=Buone vacanze!
