new static files

--- a/locale/cs-CZ/alert_bundle.properties
+++ b/locale/cs-CZ/alert_bundle.properties
@@ -15,3 +15,4 @@ alert_onek=Tisíc Uložit Club
 alert_fivek=Pět tisíc Uložit Club
 alert_tenk=Deset tisíc Uložit Club
 alert_hny=Veselé svátky!
+alert_usage=5 po sobě jdoucích dnech používání Instaright. Více odznaky čekají!
