--- a/locale/de-DE/alert_bundle.properties
+++ b/locale/de-DE/alert_bundle.properties
@@ -15,3 +15,4 @@ alert_onek=Tausende von spart Club
 alert_fivek=Fünftausend spart Club
 alert_tenk=Zehntausend spart Club
 alert_hny=Erholsame Ferien!
+alert_usage=5 aufeinander folgenden Tagen von Instaright Nutzung. Weitere Abzeichen warten!
