--- a/locale/en-US/alert_bundle.properties
+++ b/locale/en-US/alert_bundle.properties
@@ -15,3 +15,4 @@ alert_onek=Thousand Save Club
 alert_fivek=Five Thousand Save Club
 alert_tenk=Ten Thousand Save Club
 alert_hny=Happy Holidays!
+alert_usage=5 consecutive days of Instaright usage. More badges are waiting!
