--- a/locale/es-ES/alert_bundle.properties
+++ b/locale/es-ES/alert_bundle.properties
@@ -15,3 +15,4 @@ alert_onek=Mil Guardar Club
 alert_fivek=Cinco Mil Guardar Club
 alert_tenk=Diez mil Guardar Club
 alert_hny=Felices fiestas!
+alert_usage=5 días consecutivos de uso Instaright. Más insignias están esperando!
