--- a/locale/fr/alert_bundle.properties
+++ b/locale/fr/alert_bundle.properties
@@ -15,3 +15,4 @@ alert_onek=Mille Club Enregistrer
 alert_fivek=Cinq Mille Club Enregistrer
 alert_tenk=Dix Mille Club Enregistrer
 alert_hny=Joyeuses fêtes!
+alert_usage=5 jours consécutifs d'utilisation Instaright. Plus badges sont en attente!
