--- a/locale/it-IT/alert_bundle.properties
+++ b/locale/it-IT/alert_bundle.properties
@@ -15,3 +15,4 @@ alert_onek=Salva migliaia di Club
 alert_fivek=Cinque Mille Salva Club
 alert_tenk=Diecimila Salva Club
 alert_hny=Buone vacanze!
+alert_usage=5 giorni consecutivi di utilizzo Instaright. Più tessere sono in attesa!
