--- a/locale/jp-JP/alert_bundle.properties
+++ b/locale/jp-JP/alert_bundle.properties
@@ -15,3 +15,4 @@ alert_onek=クラブ千のブックマークを保存
 alert_fivek=五千のクラブを保存
 alert_tenk=10は千クラブを保存
 alert_hny=幸せな休日！
+alert_usage=Instaright使用量の連続5日間。詳細バッジが待っている！
