--- a/locale/pt/alert_bundle.properties
+++ b/locale/pt/alert_bundle.properties
@@ -15,3 +15,4 @@ alert_onek=Mil Save Club
 alert_fivek=Cinco Mil Save Club
 alert_tenk=Ten Thousand Save Club
 alert_hny=Boas festas!
+alert_usage=5 dias consecutivos de uso Instaright. Mais emblemas estão esperando!
