--- a/locale/ru-RU/alert_bundle.properties
+++ b/locale/ru-RU/alert_bundle.properties
@@ -15,3 +15,4 @@ alert_onek=Тысяча Сохранить клуб
 alert_fivek=Пять тысяч Сохранить клуб
 alert_tenk=Десять тысяч Сохранить клуб
 alert_hny=С праздниками!
+alert_usage=5 дней подряд использования Instaright. Подробнее значки ждут!
