--- a/locale/sr-RS/alert_bundle.properties
+++ b/locale/sr-RS/alert_bundle.properties
@@ -15,3 +15,4 @@ alert_onek=Клуб Хиљаду букмарка
 alert_fivek=Клуб Пет хиљада букмарка
 alert_tenk=Клуб десет хиљада букмарка
 alert_hny=Срећни празници!
+alert_usage=5 узастопних дана Instaright коришћења. Још беџева вас чека!
