--- a/locale/nl-NL/alert_bundle.properties
+++ b/locale/nl-NL/alert_bundle.properties
@@ -15,3 +15,4 @@ alert_onek=Bespaar duizenden Club
 alert_fivek=Vijfduizend opslaan Club
 alert_tenk=Ten Thousand opslaan Club
 alert_hny=Fijne feestdagen!
+alert_usage=5 opeenvolgende dagen van Instaright gebruik. Meer badges zijn te wachten!
