major bug updates and new badges

--- a/locale/cs-CZ/alert_bundle.properties
+++ b/locale/cs-CZ/alert_bundle.properties
@@ -16,3 +16,7 @@ alert_fivek=Pět tisíc Uložit Club
 alert_tenk=Deset tisíc Uložit Club
 alert_hny=Veselé svátky!
 alert_usage=5 po sobě jdoucích dnech používání Instaright. Více odznaky čekají!
+alert_gadget=Život by byl mnohem jednodušší, kdybychom měli jen source code
+alert_news=Informace není znalostí - Albert Einstein
+alert_economy=Největší radost v životě je dělat to, co lidé říkají, můžete to udělat.
+alert_video=Všichni filmaři dnes.
