--- a/locale/de-DE/alert_bundle.properties
+++ b/locale/de-DE/alert_bundle.properties
@@ -16,3 +16,7 @@ alert_fivek=Fünftausend spart Club
 alert_tenk=Zehntausend spart Club
 alert_hny=Erholsame Ferien!
 alert_usage=5 aufeinander folgenden Tagen von Instaright Nutzung. Weitere Abzeichen warten!
+alert_gadget=Das Leben wäre so viel einfacher, wenn wir nur den Source Code.
+alert_news=Information ist nicht Wissen - Albert Einstein
+alert_economy=Das größte Vergnügen im Leben ist zu tun, was Leute sagen, man kann das nicht.
+alert_video=Everybody's ein Filmemacher heute.
