--- a/locale/en-US/alert_bundle.properties
+++ b/locale/en-US/alert_bundle.properties
@@ -16,3 +16,7 @@ alert_fivek=Five Thousand Save Club
 alert_tenk=Ten Thousand Save Club
 alert_hny=Happy Holidays!
 alert_usage=5 consecutive days of Instaright usage. More badges are waiting!
+alert_gadget=Life would be so much easier if we only had the source code.
+alert_news=Information is not knowledge - Albert Einstein
+alert_economy=The greatest pleasure in life is doing what people say you cannot do.
+alert_video=Everybody's a filmmaker today. 
