--- a/locale/es-ES/alert_bundle.properties
+++ b/locale/es-ES/alert_bundle.properties
@@ -16,3 +16,7 @@ alert_fivek=Cinco Mil Guardar Club
 alert_tenk=Diez mil Guardar Club
 alert_hny=Felices fiestas!
 alert_usage=5 días consecutivos de uso Instaright. Más insignias están esperando!
+alert_gadget=La vida sería mucho más fácil si sólo tuviéramos el source code.
+alert_news=Información no es conocimiento - Albert Einstein
+alert_economy=El mayor placer en la vida es hacer lo que la gente dice que no puede hacer.
+alert_video=Es un director de cine hoy en día.
