--- a/locale/fr/alert_bundle.properties
+++ b/locale/fr/alert_bundle.properties
@@ -16,3 +16,7 @@ alert_fivek=Cinq Mille Club Enregistrer
 alert_tenk=Dix Mille Club Enregistrer
 alert_hny=Joyeuses fêtes!
 alert_usage=5 jours consécutifs d'utilisation Instaright. Plus badges sont en attente!
+alert_gadget=La vie serait tellement plus facile si nous avions seulement le code source.
+alert_news=Information n'est pas la connaissance - Albert Einstein
+alert_economy=Le plus grand plaisir dans la vie fait que les gens disent que vous ne pouvez pas faire.
+alert_video=Tout le monde est un cinéaste d'aujourd'hui.
