--- a/locale/it-IT/alert_bundle.properties
+++ b/locale/it-IT/alert_bundle.properties
@@ -16,3 +16,7 @@ alert_fivek=Cinque Mille Salva Club
 alert_tenk=Diecimila Salva Club
 alert_hny=Buone vacanze!
 alert_usage=5 giorni consecutivi di utilizzo Instaright. Più tessere sono in attesa!
+alert_gadget=La vita sarebbe molto più facile se abbiamo avuto solo il source code.
+alert_news=Non è conoscenza - Albert Einstein
+alert_economy=Il più grande piacere nella vita è fare quello che dice la gente non si può fare.
+alert_video=Un regista di oggi.
