--- a/locale/jp-JP/alert_bundle.properties
+++ b/locale/jp-JP/alert_bundle.properties
@@ -16,3 +16,7 @@ alert_fivek=五千のクラブを保存
 alert_tenk=10は千クラブを保存
 alert_hny=幸せな休日！
 alert_usage=Instaright使用量の連続5日間。詳細バッジが待っている！
+alert_gadget=我々はソースコードのみを持っている場合人生はそんなに簡単になります。
+alert_news=アルバートアインシュタイン-情報、知識ではありません
+alert_economy=生活の中で最大の喜びは、人々はあなたができないと言う何をしている。
+alert_video=誰もが今日の作家です。
