--- a/locale/nl-NL/alert_bundle.properties
+++ b/locale/nl-NL/alert_bundle.properties
@@ -16,3 +16,7 @@ alert_fivek=Vijfduizend opslaan Club
 alert_tenk=Ten Thousand opslaan Club
 alert_hny=Fijne feestdagen!
 alert_usage=5 opeenvolgende dagen van Instaright gebruik. Meer badges zijn te wachten!
+alert_gadget=Het leven zou zoveel makkelijker zijn als we alleen hadden de broncode.
+alert_news=Informatie is geen kennis - Albert Einstein
+alert_economy=Het grootste plezier in het leven is doen wat mensen zeggen dat je niet kan doen.
+alert_video=Iedereen een filmmaker vandaag.
