--- a/locale/pt/alert_bundle.properties
+++ b/locale/pt/alert_bundle.properties
@@ -16,3 +16,7 @@ alert_fivek=Cinco Mil Save Club
 alert_tenk=Ten Thousand Save Club
 alert_hny=Boas festas!
 alert_usage=5 dias consecutivos de uso Instaright. Mais emblemas estão esperando!
+alert_gadget=A vida seria muito mais fácil se tivéssemos o source code.
+alert_news=A informação não é conhecimento - Albert Einstein
+alert_economy=O maior prazer da vida é fazer o que as pessoas dizem que você não pode fazer.
+alert_video=Todo mundo é um cineasta de hoje.
