--- a/locale/ru-RU/alert_bundle.properties
+++ b/locale/ru-RU/alert_bundle.properties
@@ -16,3 +16,7 @@ alert_fivek=Пять тысяч Сохранить клуб
 alert_tenk=Десять тысяч Сохранить клуб
 alert_hny=С праздниками!
 alert_usage=5 дней подряд использования Instaright. Подробнее значки ждут!
+alert_gadget=Жизнь была бы намного проще, если у нас был только исходный код.
+alert_news=Информация не есть знание - Альберт Эйнштейн
+alert_economy=Самое большое удовольствие в жизни делать то, что люди говорят, вы не можете сделать.
+alert_video=Каждый режиссер сегодня.
