--- a/locale/sr-RS/alert_bundle.properties
+++ b/locale/sr-RS/alert_bundle.properties
@@ -16,3 +16,7 @@ alert_fivek=Клуб Пет хиљада букмарка
 alert_tenk=Клуб десет хиљада букмарка
 alert_hny=Срећни празници!
 alert_usage=5 узастопних дана Instaright коришћења. Још беџева вас чека!
+alert_gadget=Живот би био много лакше ако смо имали изворни код програма.
+alert_news=Информација није знање - Алберт Ајнштајн
+alert_economy=Највеће задовољство у животу ради оно што људи кажу да не можете да урадите.
+alert_video=Свако је филмски редитељ данас.
