--- a/locale/cn-CN/alert_bundle.properties
+++ b/locale/cn-CN/alert_bundle.properties
@@ -16,3 +16,7 @@ alert_fivek=五千年保存俱乐部
 alert_tenk=万保存俱乐部
 alert_hny=节日快乐！
 alert_usage=连续使用5天的Instaright。更多的徽章在等待！
+alert_gadget=生活会这么容易得多，如果我们只用了源代码。
+alert_news=信息，不是知识- 阿尔伯特爱因斯坦
+alert_economy=生命中最大的乐趣就是做别人说你不能做什么。
+alert_video=每个人的一个电影制片人今天。
