updated german locale and new badges

--- a/locale/de-DE/alert_bundle.properties
+++ b/locale/de-DE/alert_bundle.properties
@@ -1,20 +1,20 @@
 ﻿stupid_first_line=Don't touch it
 alert_instaright=Instaright Alarm
-alert_invalid_email=Ungültige E-Mail. Bitte geben Sie eine gültige E-Mail in das Plugin-Optionen.
-alert_save_disabled=Seite Stromsparmodus deaktiviert wurde. Bitte überprüfen Sie Ihre Einstellungen.
-alert_no_url=Kann nicht bestimmen Link ... versuchen Sie einen anderen!
+alert_invalid_email=Ungültige E-Mail. Bitte geben Sie eine gültige E-Mail an in den Einstellungen des Add-ons.
+alert_save_disabled=Seite speichern-Modus wurde deaktiviert. Bitte überprüfen Sie Ihre Einstellungen.
+alert_no_url=Kann Link nicht bestimmen ... versuchen Sie einen anderen!
 alert_success=Erfolg.
-alert_bad_request=Bad Anfrage. Fehlende erforderliche Parameter.
+alert_bad_request=Falsche Anfrage. Fehlender erforderlicher Parameter.
 alert_invalid_credential=Ungültiger Benutzername oder Kennwort.
-alert_service_error=Der Dienst ist ein Fehler aufgetreten. Bitte versuchen Sie es später erneut.
-alert_thanks=Danke für die Unterstützung weitere Entwicklung von diesem Addon.
+alert_service_error=Der Dienst hat einen Fehler festgestellt. Bitte versuchen Sie es später erneut.
+alert_thanks=Danke für die Unterstützung der weiteren Entwicklung dieses Add-ons.
 alert_sl=Speeding? Awesome!
 alert_ny=Lust auf New Yorker heute?
-alert_trophy=Herzlichen Glückwunsch! Gestern haben Sie landeten auf Sieger Podium.
-alert_onek=Tausende von spart Club
-alert_fivek=Fünftausend spart Club
-alert_tenk=Zehntausend spart Club
-alert_hny=Erholsame Ferien!
+alert_trophy=Herzlichen Glückwunsch! Gestern sind Sie auf dem Siegerpodest gelandet.
+alert_onek=Tausend sparen-Club
+alert_fivek=Fünftausend sparen-Club
+alert_tenk=Zehntausend sparen-Club
+alert_hny=Frohes neues Jahr
 alert_usage=5 aufeinander folgenden Tagen von Instaright Nutzung. Weitere Abzeichen warten!
 alert_gadget=Das Leben wäre so viel einfacher, wenn wir nur den Source Code.
 alert_news=Information ist nicht Wissen - Albert Einstein
