--- a/locale/de-DE/options.dtd
+++ b/locale/de-DE/options.dtd
@@ -1,4 +1,4 @@
-<!ENTITY	label.instapaper.account	"Ihre Instapaper Konto:">
-<!ENTITY	label.instapaper.password	"Ihre Instapaper Passwort (optional):">
-<!ENTITY	label.deactivate.success	"Deaktivieren Erfolg Alarm">
-<!ENTITY	label.deactivate.save	"Deaktivieren Seite Save Mode">
+<!ENTITY	label.instapaper.account	"Ihr Instapaper Konto:">
+<!ENTITY	label.instapaper.password	"Ihre Instapaper Kennwort (optional):">
+<!ENTITY	label.deactivate.success	"Erfolgsmeldung deaktivieren"
+<!ENTITY	label.deactivate.save	"Seite speichern-Modus deaktivieren">
