japanese locale updated

--- a/locale/jp-JP/alert_bundle.properties
+++ b/locale/jp-JP/alert_bundle.properties
@@ -1,22 +1,22 @@
 ﻿stupid_first_line=Don't touch it
-alert_instaright=Instapaperの警告
-alert_invalid_email=無効な電子メール。アドオンオプションで有効なメールアドレスを入力してください。
+alert_instaright=Instapaperの警告です。
+alert_invalid_email=無効のメールです。アドオンオプションで有効なメールアドレスを入力してください。
 alert_save_disabled=ページの保存モードが無効になっています。設定を確認してください。
-alert_no_url=リンクを決定することはできません...別のものをお試し下さい！
-alert_success=成功しました。
-alert_bad_request=不正な要求。不足しているパラメータを必要です。
-alert_invalid_credential=無効なユーザー名またはパスワードを入力します。
-alert_service_error=サービスはエラーが発生しました。後でもう一度やり直してください。
-alert_thanks=おかげで、継続的な開発のためのサポートしています。
+alert_no_url=リンクを特定できません。別のリンクをお試し下さい！
+alert_success=成功です。
+alert_bad_request=不正な要求です。パラメータが不足しています。
+alert_invalid_credential=無効なユーザー名またはパスワードです。
+alert_service_error=サービスのエラーが発生しました。後でもう一度やり直してください。
+alert_thanks=このアドオンの継続的な開発をサポートしていただきありがとうございます。
 alert_sl=高速化？素晴らしい！
-alert_ny=今日はニューヨーカーからですか？
-alert_trophy=おめでとう！昨日は優勝の表彰台上で終わった。
-alert_onek=クラブ千のブックマークを保存
-alert_fivek=五千のクラブを保存
-alert_tenk=10は千クラブを保存
-alert_hny=幸せな休日！
-alert_usage=Instaright使用量の連続5日間。詳細バッジが待っている！
-alert_gadget=我々はソースコードのみを持っている場合人生はそんなに簡単になります。
-alert_news=アルバートアインシュタイン-情報、知識ではありません
-alert_economy=生活の中で最大の喜びは、人々はあなたができないと言う何をしている。
-alert_video=誰もが今日の作家です。
+alert_ny=今日はニューヨーカーの気分ですか？
+alert_trophy=おめでとう！昨日はあなたは優勝の表彰台に立ちました。
+alert_onek=1000でクラブを助けられます。
+alert_fivek=5000でクラブを助けられます。
+alert_tenk=10000でクラブを助けられます。
+alert_hny=幸せな休日を！
+alert_usage=Instarightを5日間連続して使用すると、さらにバッジをもらえます！
+alert_gadget=人生にソースコードがあれば人生はもっと楽になるのに。
+alert_news=情報は知識にあらず。～アルバートアインシュタイン
+alert_economy=生活の最大の喜びは、人々があなたにはできないと言ったことをすることです。
+alert_video=この時代において、誰もが映画のプロデューサーです。
