--- a/locale/es-ES/alert_bundle.properties
+++ b/locale/es-ES/alert_bundle.properties
@@ -1,13 +1,14 @@
-﻿stupid_first_line=Don't touch it
-alert_instaright=Instapaper alerta
-alert_invalid_email=Correo electrónico no válido. Por favor, introduzca válida de correo electrónico en las opciones de complemento.
-alert_save_disabled=El modo de guardar la página ha sido desactivada. Por favor revise su configuración.
+stupid_first_line=Don't touch it
+alert_instaright=Alerta de Instapaper
+alert_invalid_email=Correo electrónico no válido. Por favor, introduzca un correo válido.
+alert_save_disabled=La opción “guardar la página” ha sido desactivada. Por favor revise su configuración.
 alert_no_url=No se puede determinar enlace ... pruebe con otro!
 alert_success=Éxito.
+alert_no_url=No se puede determinar enlace, ¡pruebe con otro!
 alert_bad_request=Solicitud incorrecta. Falta el parámetro.
-alert_invalid_credential=No válido nombre de usuario o contraseña.
+alert_invalid_credential=Nombre de usuario o contraseña no válidos.
 alert_service_error=El servicio ha detectado un error. Por favor, inténtelo de nuevo más tarde.
-alert_thanks=Gracias por apoyar el desarrollo continuado de este addon.
+alert_thanks=Gracias por apoyar a la continuidad de este desarrollo.
 alert_sl=En la prisa? Muy bien!
 alert_ny=Sentirse como Nueva York hoy en día?
 alert_trophy=¡Felicidades! Ayer terminó en el podio ganador.
@@ -16,7 +17,7 @@ alert_fivek=Cinco Mil Guardar Club
 alert_tenk=Diez mil Guardar Club
 alert_hny=Felices fiestas!
 alert_usage=5 días consecutivos de uso Instaright. Más insignias están esperando!
-alert_gadget=La vida sería mucho más fácil si sólo tuviéramos el source code.
-alert_news=Información no es conocimiento - Albert Einstein
+alert_gadget=La vida sería mucho más fácil si tan sólo tuviéramos el código fuente.
+alert_news=La información no es conocimiento - Albert Einstein
 alert_economy=El mayor placer en la vida es hacer lo que la gente dice que no puede hacer.
 alert_video=Es un director de cine hoy en día.
