--- a/locale/cn-CN/alert_bundle.properties
+++ b/locale/cn-CN/alert_bundle.properties
@@ -20,3 +20,9 @@ alert_gadget=生活会这么容易得多，如果我们只用了源代码。
 alert_news=信息，不是知识- 阿尔伯特爱因斯坦
 alert_economy=生命中最大的乐趣就是做别人说你不能做什么。
 alert_video=每个人的一个电影制片人今天。
+alert_congrats=恭喜你！
+alert_first_message=你做出这个Instaright版本和你赢得了第一个书签香槟徽章！更凉的东西和徽章是点击几下前进。
+alert_music=啊，音乐。一个超越所有我们在这里做的神奇！
+alert_wiki=制定学习的热情。如果你这样做，你将永远不会停止增长。
+alert_sport=设定你的目标很高，你不停止，直到那里。
+alert_domain=Woohoo! 第一次庆祝这个领域。有这方面的一些问题！
