--- a/locale/cs-CZ/alert_bundle.properties
+++ b/locale/cs-CZ/alert_bundle.properties
@@ -20,3 +20,9 @@ alert_gadget=Život by byl mnohem jednodušší, kdybychom měli jen source code
 alert_news=Informace není znalostí - Albert Einstein
 alert_economy=Největší radost v životě je dělat to, co lidé říkají, můžete to udělat.
 alert_video=Všichni filmaři dnes.
+alert_congrats=Gratulujeme!
+alert_first_message=Jste provedli svůj první záložku s touto Instaright verzi a vy jste vyhráli Champagne odznak! Další super věci a odznaky jsou málo kliknutí dopředu.
+alert_music=Ach, hudba. magie za všechno, co děláme tady!
+alert_wiki=Vypracovat vášeň pro učení. Pokud tak učiníte, budete nikdy nepřestane růst.
+alert_sport=Nastavte si vysoké cíle, a dont nezastaví, dokud se tam dostat.
+alert_domain=Woohoo! Poprvé označení této oblasti. Máš nějakého bodu za to!
