--- a/locale/de-DE/context.dtd
+++ b/locale/de-DE/context.dtd
@@ -1,1 +1,4 @@
 <!ENTITY	label.context	"Instapaper diesen Artikel!">
+<!ENTITY	instaright.send	"Send article to Instapaper">
+<!ENTITY	instaright.send	"Send article to Instapaper">
+<!ENTITY	instaright.send	"Send article to Instapaper">
