--- a/locale/es-ES/alert_bundle.properties
+++ b/locale/es-ES/alert_bundle.properties
@@ -21,3 +21,9 @@ alert_gadget=La vida sería mucho más fácil si tan sólo tuviéramos el códig
 alert_news=La información no es conocimiento - Albert Einstein
 alert_economy=El mayor placer en la vida es hacer lo que la gente dice que no puede hacer.
 alert_video=Es un director de cine hoy en día.
+alert_congrats=¡Felicidades!
+alert_first_message=Usted ha hecho su primer marcador con esta versión Instaright y ganó insignia de champán! Cosas más frescas e insignias son pocos clics por delante.
+alert_music=Ah, la música. Una magia más allá de todo lo que hacemos aquí!
+alert_wiki=Desarrollar una pasión por aprender. Si lo haces, nunca dejará de crecer.
+alert_sport=Establezca sus metas de alto, y dejar de No hasta llegar allí.
+alert_domain=Woohoo! Por primera vez la marca de dominios. ¿Tienes algún momento por esto!
