--- a/locale/fr/alert_bundle.properties
+++ b/locale/fr/alert_bundle.properties
@@ -20,3 +20,9 @@ alert_gadget=La vie serait tellement plus facile si nous avions seulement le cod
 alert_news=Information n'est pas la connaissance - Albert Einstein
 alert_economy=Le plus grand plaisir dans la vie fait que les gens disent que vous ne pouvez pas faire.
 alert_video=Tout le monde est un cinéaste d'aujourd'hui.
+alert_congrats=Félicitations!
+alert_first_message=Vous avez fait votre premier signet avec cette version Instaright et vous avez gagné badge Champagne! Plus cool stuff et badges sont quelques clics à venir.
+alert_music=Ah, la musique. Une magie au-delà de tout ce que nous faisons ici!
+alert_wiki=Développer une passion pour l'apprentissage. Si vous le faites, vous ne cessera jamais de croître.
+alert_sport=Définissez vos objectifs élevés, et dont stop jusqu'à ce que vous vous y rendre.
+alert_domain=Woohoo! La première fois que le marquage ce domaine. Vous avez un peu de ce point!
