--- a/locale/it-IT/alert_bundle.properties
+++ b/locale/it-IT/alert_bundle.properties
@@ -20,3 +20,9 @@ alert_gadget=La vita sarebbe molto più facile se abbiamo avuto solo il source c
 alert_news=Non è conoscenza - Albert Einstein
 alert_economy=Il più grande piacere nella vita è fare quello che dice la gente non si può fare.
 alert_video=Un regista di oggi.
+alert_congrats=Complimenti!
+alert_first_message=Hai fatto il tuo primo segnalibro con questa versione Instaright e hai vinto distintivo Champagne! Cose interessanti in più e distintivi sono alcuni scatti in avanti.
+alert_music=Ah, la musica. Una magia al di là di tutto ciò che facciamo qui!
+alert_wiki=Sviluppare una passione per l'apprendimento. Se lo fai, non cesserà mai di crescere.
+alert_sport=Imposta i tuoi obiettivi alti, e smettere di dont fino ad arrivare.
+alert_domain=Woohoo! La prima volta marcatura questo dominio. Hai un certo punto per questo!
