--- a/locale/nl-NL/alert_bundle.properties
+++ b/locale/nl-NL/alert_bundle.properties
@@ -20,3 +20,9 @@ alert_gadget=Het leven zou zoveel makkelijker zijn als we alleen hadden de bronc
 alert_news=Informatie is geen kennis - Albert Einstein
 alert_economy=Het grootste plezier in het leven is doen wat mensen zeggen dat je niet kan doen.
 alert_video=Iedereen een filmmaker vandaag.
+alert_congrats=Gefeliciteerd!
+alert_first_message=Je gemaakt hebt uw eerste bladwijzer met deze Instaright versie en je hebt gewonnen Champagne badge! Meer coole dingen en badges zijn paar klikken vooruit.
+alert_music=Ah, muziek. Een magisch dan alles wat we doen hier!
+alert_wiki=Ontwikkel een passie voor leren. Als je dat doet, zul je nooit ophouden te groeien.
+alert_sport=Stel je doelen hoog en dont stop totdat je er bent.
+alert_domain=Woohoo! Eerst markering dit domein. Heb je een bepaald punt voor!
