--- a/locale/pt/alert_bundle.properties
+++ b/locale/pt/alert_bundle.properties
@@ -20,3 +20,9 @@ alert_gadget=A vida seria muito mais fácil se tivéssemos o source code.
 alert_news=A informação não é conhecimento - Albert Einstein
 alert_economy=O maior prazer da vida é fazer o que as pessoas dizem que você não pode fazer.
 alert_video=Todo mundo é um cineasta de hoje.
+alert_congrats=Parabéns!
+alert_first_message=Você fez o seu primeiro marcador com esta versão Instaright e você ganhou emblema Champagne! Um material mais fresco e os emblemas poucos cliques frente.
+alert_music=Ah, a música. A magia além de todas as que fazemos aqui!
+alert_wiki=Desenvolver uma paixão por aprender. Se você fizer isso, você nunca vai deixar de crescer.
+alert_sport=Defina suas metas, e não pare até chegar lá.
+alert_domain=Woohoo! Primeira vez marcando neste domínio. Tem algum ponto para isso!
