--- a/locale/sr-RS/alert_bundle.properties
+++ b/locale/sr-RS/alert_bundle.properties
@@ -20,3 +20,9 @@ alert_gadget=Живот би био много лакше ако смо имал
 alert_news=Информација није знање - Алберт Ајнштајн
 alert_economy=Највеће задовољство у животу ради оно што људи кажу да не можете да урадите.
 alert_video=Свако је филмски редитељ данас.
+alert_congrats=Честитамо!
+alert_first_message=Направили сте први маркер са овом верзијом Instaright и ви освојили Шампањ значку! Још занимљивих ствари и значке чекају за вас.
+alert_music=Ах, музика.магија изнад свега што радимо овде!
+alert_wiki=Сви би требало да развију страст за учењем. Ако то урадите, никада нећете престати да растете.
+alert_sport=Поставите циљеве високо, и не престати док стигнете тамо.
+alert_domain=Ура! Први пут сте обележили овај домен. Награда је у виду додатних поена за вас!
