--- a/locale/de-DE/alert_bundle.properties
+++ b/locale/de-DE/alert_bundle.properties
@@ -20,3 +20,9 @@ alert_gadget=Das Leben wäre so viel einfacher, wenn wir nur den Source Code.
 alert_news=Information ist nicht Wissen - Albert Einstein
 alert_economy=Das größte Vergnügen im Leben ist zu tun, was Leute sagen, man kann das nicht.
 alert_video=Everybody's ein Filmemacher heute.
+alert_congrats=Herzlichen Glückwunsch!
+alert_first_message=Sie haben Ihre erste Lesezeichen mit dieser Version gemacht und Instaright Sie gewann Champagner Abzeichen! Mehr coole Sachen und Abzeichen sind nur wenige Klicks voraus.
+alert_music=Ach, Musik. Ein magisches über alles, was wir hier tun!
+alert_wiki=Entwickeln Sie eine Leidenschaft für das Lernen. Wenn du dies tust, wirst du nie aufhören zu wachsen.
+alert_sport=Setzen Sie Ihre Ziele hoch und dont stop bis Sie dort bekommen.
+alert_domain=Woohoo! Zum ersten Mal Kennzeichnung dieser Domain. Got irgendwann dafür!
