--- a/locale/en/alert_bundle.properties
+++ b/locale/en/alert_bundle.properties
@@ -20,3 +20,9 @@ alert_gadget=Life would be so much easier if we only had the source code.
 alert_news=Information is not knowledge - Albert Einstein
 alert_economy=The greatest pleasure in life is doing what people say you cannot do.
 alert_video=Everybody's a filmmaker today. 
+alert_congrats=Congrats!
+alert_first_message=You've made your first save with this Instaright version and you won Champagne badge! More cool stuff and badges are few clicks ahead.
+alert_music=Ah, music. A magic beyond all we do here!
+alert_wiki=Develop a passion for learning. If you do, you will never cease to grow.
+alert_sport=Set your goals high, and dont stop till you get there.
+alert_domain=Woot! Recently you've marked domain for first time. Got some point for this!
